--- a/internal/report/assets/template.html
+++ b/internal/report/assets/template.html
@@ -12,7 +12,7 @@
   }
 
   .sanitizer {
-    padding: 10px;
+    padding: 10px 30px;
   }
 
   ul.outcome {
@@ -170,7 +170,7 @@
   }
 
   div.scorer {
-    width: 60%;
+    width: 90%;
     text-align: right;
   }
 </style>
